--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.16.2",
+		"ramda": "^0.24.1",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.46.4"
+		"react-native": "0.46.4",
+		"react-native-fetch-blob": "^0.10.6",
+		"react-native-img-cache": "^1.4.0",
+		"rxjs": "^5.4.2"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
